Andamento do layout

--- a/app/src/main/res/layout/activity_curiosity.xml
+++ b/app/src/main/res/layout/activity_curiosity.xml
@@ -17,7 +17,8 @@
         android:layout_marginTop="43dp"
         android:layout_marginEnd="306dp"
         android:layout_marginBottom="341dp"
-        android:text="@string/title_curiosity"
+        android:text="@string/text_curiosity"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +34,8 @@
         android:layout_marginTop="126dp"
         android:layout_marginEnd="337dp"
         android:layout_marginBottom="266dp"
-        android:text="@string/patrono_curiosity"
+        android:text="@string/patrono"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +50,7 @@
         android:layout_marginEnd="337dp"
         android:layout_marginBottom="222dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +65,7 @@
         android:layout_marginEnd="337dp"
         android:layout_marginBottom="181dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +79,8 @@
         android:layout_marginTop="126dp"
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="266dp"
-        android:text="@string/bithday_curiosity"
+        android:text="@string/bithday"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +95,7 @@
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="222dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +110,7 @@
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="181dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,14 +121,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="595dp"
-        android:layout_marginTop="347dp"
+        android:layout_marginTop="318dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="45dp"
+        android:background="#975E33"
+        android:backgroundTint="#975E33"
+        android:onClick="Menu"
         android:text="@string/text_menu"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView8"
@@ -132,6 +145,7 @@
         android:layout_marginEnd="559dp"
         android:layout_marginBottom="229dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +159,8 @@
         android:layout_marginTop="126dp"
         android:layout_marginEnd="530dp"
         android:layout_marginBottom="266dp"
-        android:text="@string/house_curiosity"
+        android:text="@string/house"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,9 +175,18 @@
         android:layout_marginEnd="559dp"
         android:layout_marginBottom="181dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="86dp"
+        android:background="?android:attr/listDivider"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
