--- a/app/src/main/res/layout/activity_visualization.xml
+++ b/app/src/main/res/layout/activity_visualization.xml
@@ -4,174 +4,231 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:backgroundTint="#FFFFFF"
+    android:background="#936636"
     tools:context=".VisualizationActivity">
 
     <TextView
         android:id="@+id/teste"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="9dp"
         android:text="TextView"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="289dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/teste2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="#000000"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="324dp" />
+    <View
+        android:id="@+id/view"
+        android:layout_width="709dp"
+        android:layout_height="378dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="25dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="176dp"
-        android:layout_height="198dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="55dp"
+        android:id="@+id/imgRg"
+        android:layout_width="159dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="188dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtnum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="59dp"
+        android:text="@string/text_num"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="68dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/txtSexo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="59dp"
+        android:text="@string/text_sexo"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="68dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/txtname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="124dp"
+        android:text="@string/text_name"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="96dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/txtpatrono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="193dp"
+        android:text="@string/patrono"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="137dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/txtCharacter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="294dp"
+        android:text="@string/text_character"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="170dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/txthouse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="193dp"
+        android:text="@string/house"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="207dp" />
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/txtbirthday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="124dp"
+        android:text="@string/bithday"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="436dp"
-        tools:layout_editor_absoluteY="234dp" />
+        android:textSize="13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtname2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="151dp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="137dp" />
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtpatrono2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="220dp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="96dp" />
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/txtcharacter2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="330dp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="170dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="592dp"
-        tools:layout_editor_absoluteY="324dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="476dp"
-        tools:layout_editor_absoluteY="324dp" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="352dp"
-        tools:layout_editor_absoluteY="324dp" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="324dp" />
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txthouse2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="220dp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="207dp" />
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/txtbirthday2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="151dp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="234dp" />
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtnum2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="199dp"
+        android:layout_marginTop="90dp"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtsexo2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="484dp"
+        android:layout_marginTop="90dp"
+        android:textColor="#000000"
+        android:textSize="18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btnShare"
+        android:layout_width="67dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="649dp"
+        android:layout_marginTop="328dp"
+        android:backgroundTint="#FFFFFF"
+        android:tint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_share" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="61dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="588dp"
+        android:layout_marginTop="328dp"
+        android:backgroundTint="#FFFFFF"
+        android:tint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
